<resources>
    <string name="app_name">Do Kim Dang Khoa_1706020040</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="tieuDe">Danh Sách Các Môn Học</string>
    <string name="tenMonHoc">Tên Môn Học</string>
    <string name="maMonHoc">Mã Môn Học</string>
    <string name="soTinChi">Số tín chỉ</string>
    <string name="de_hoten">Họ Và Tên</string>
    <string name="de_Nganh">Ngành</string>
    <string name="de_maSV">Mã SV</string>
    <string name="de_tinchi">Tín Chỉ</string>
    <string name="de_TenMH">Tên Môn Học</string>
    <string name="de_maMH">Mã Môn Học</string>
    <string name="de_GianVien">Giảng Viên</string>
    <string name="detail">Chi tiết môn học</string>
</resources>
